--- a/docs/PC/Linux/Manjaro/软件/输入法/输入法.md
+++ b/docs/PC/Linux/Manjaro/软件/输入法/输入法.md
@@ -1,6 +1,6 @@
 # 输入法
 
-## 环境变量的设置
+## Wayland环境变量的设置
 
 编辑或创建`~/.fcitx_env.sh`文件，添加下列内容：
 
@@ -16,6 +16,24 @@ export GLFW_IM_MODULE=fcitx
 
 ```bash
 source ~/.fcitx_env.sh
+```
+
+```bash
+vim ~/.pam_environment
+```
+
+```
+GTK_IM_MODULE=fcitx
+QT_IM_MODULE=fcitx
+XMODIFIERS=@im=fcitx
+```
+
+## 开机自启
+
+`vim ~/.xinitrc`
+
+```
+fcitx5 &
 ```
 
 ## Ref
